[tool.poetry]
name = "recipe-app-api"
version = "0.1.0"
description = ""
authors = ["rzykie <zykie1018@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
